--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -9,11 +9,11 @@
   justify-content: flex-start;
   // overflow: hidden;
   position: relative;
-  width: auto;
-  height: 55px;
   z-index: 10;
   transform: translate(0, 0);
   transition: 0.5s ease;
+  width: auto;
+  height: 55px;
 
   &.open {
     width: 45vw;
@@ -71,7 +71,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 10;
     transform: translate(0, -100%);
     transition: 0.5s ease;
